<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:onClick="enterName" />

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/toppings"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:text="@string/whipped_cream"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:text="@string/chocolate"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <TextView
                style="@style/HeaderTextStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/quantity"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="#5D4037"
                    android:onClick="decrement"
                    android:text="-"
                    android:textColor="#212121" />


                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/initial_quantity_value"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />


                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:background="#5D4037"
                    android:onClick="increment"
                    android:text="+"
                    android:textColor="#212121" />
            </LinearLayout>

            <Button
                android:id="@+id/submit_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="#5D4037"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textColor="#212121" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>